--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   table_calendar: ^3.2.0
   intl: ^0.20.2  # alebo najnovšiu dostupnú verziu
   settings_ui: ^2.0.2
+  flutter_colorpicker: ^1.0.3
+
 
 
 
